# joe

./: .gitignore  configure.ac
debian/: README.Debian  changelog  control  copyright  install  lintian-overrides  postinst  postrm  preinst  prerm  rules
joe/: bw.c  kbd.c  kbd.h  main.c  rc.c  scrn.c  syntax.c  syntax.h  tty.c  tty.h  types.h  ublock.c  uedit.c
po/: HOWTO  Makefile.am  en_GB.po  joe.pot  joerc.sed
syntax/: c.jsf
